fixed layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 .app-container {
   display: grid;
   grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr;
   grid-template-areas:
     "nav"
     "main";
   row-gap: 10px;
   column-gap: 10px;
-  height: 100%;
   padding: 0 6px;
+  min-height: 100vh;
 }
 
 .navbar {
@@ -16,12 +17,6 @@
 
 .main-col {
   grid-area: main;
-}
-
-.image {
-  width: 100px;
-  height: 100%;
-  background-color: antiquewhite;
 }
 
 @media screen and (max-width: 1023px) {
@@ -36,7 +31,6 @@
     grid-template-rows: repeat(2, auto);
     row-gap: 10px;
     column-gap: 10px;
-    height: 100%;
   }
 
   .navbar {
